--- a/css/styles.css
+++ b/css/styles.css
@@ -456,6 +456,33 @@ transition: background-color var(--transition-duration-function);
     background-color: #31D0AA;
 }
 
+.footer-mail-input {
+    display: flex;
+
+}
+.footer-input {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    background-color: var(--dark-color);
+}
+.footer-btn {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding: 8px 24px;
+    
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    border-radius: 4px;
+    border: transparent;
+    color: var(--white-color);
+    background-color: var(--primary-brand-color);
+}
 
 
 
@@ -555,6 +582,7 @@ transition: background-color var(--transition-duration-function);
     z-index: 100;
     width: 100%;
     height: 100%;
+    
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity var(--transition-duration-function), visibility var(--transition-duration-function);
 }
@@ -570,6 +598,7 @@ transition: background-color var(--transition-duration-function);
     transform: translate(-50%,-50%);
     width: 408px;
     height: 576px;
+    padding: 72px 24px 24px 24px;
     background-color: #FCFCFC;
 }
 .modal-close-btn {
