--- a/css/styles.css
+++ b/css/styles.css
@@ -464,8 +464,7 @@ transition: background-color var(--transition-duration-function);
     background-color: #31D0AA;
 }
 
-.footer-mail-input {
-    
+.footer-mail-input { 
 
 }
 .form-foter {
@@ -592,7 +591,7 @@ transition: background-color var(--transition-duration-function);
 }
 
 
-    /* MODAL */
+    /*-------------- MODAL------------- */
 .backdrop {
     position: fixed;
     top: 0;
@@ -676,6 +675,7 @@ position: relative;
     padding-left: 38px;
     padding-bottom: 8px;
     font: inherit;
+    
     border:  1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;  
     transition: fill var(--transition-duration-function);
@@ -694,7 +694,7 @@ fill: var(--primary-brand-color);
 }
 .modal-icon {
     position: absolute;
-    top: 29px;
+    top: 50%;
     left: 16px;
 }
 
@@ -709,6 +709,7 @@ fill: var(--primary-brand-color);
     font-size: 12px;
     line-height: 1.33;
     letter-spacing: 0.04em;
+    
 }
 
 .form-check {
