--- a/css/styles.css
+++ b/css/styles.css
@@ -434,10 +434,6 @@ transition: background-color var(--transition-duration-function);
     font-size: 16px;
     line-height: 1.5; 
 }
-.social-media {
-   
-}
-
 
 .form-subscribe {
     width: 264px;
@@ -464,12 +460,10 @@ transition: background-color var(--transition-duration-function);
     background-color: #31D0AA;
 }
 
-.footer-mail-input { 
-
-}
 .form-foter {
     display: flex;
     align-items: flex-end;
+    width: 453px;
     
 }
 .footer-input {
@@ -614,14 +608,14 @@ transition: background-color var(--transition-duration-function);
     left: 50%;
     transform: translate(-50%,-50%);
     width: 408px;
-    height: 576px;
+    
     padding: 72px 24px 24px 24px;
     background-color: #FCFCFC;
 }
 .modal-close-btn {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 24px;
+    right: 24px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -671,22 +665,22 @@ position: relative;
 }
 .form-input {
     width: 100%;
+    height: 40px;
     padding-top: 8px;
     padding-left: 38px;
     padding-bottom: 8px;
-    font: inherit;
-    
+    font: inherit;   
     border:  1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;  
     transition: fill var(--transition-duration-function);
 }
 .form-input:focus {
- border-color: 1px solid var(--primary-brand-color);
- 
+    outline: none;
+    border-color: var(--primary-brand-color);
 }
-.form-input:focus + .modal-icon {
-   
-   
+
+.form-field:focus-within > .form-input {
+    border-color: var(--primary-brand-color);
 }
 
 .form-field:focus-within > .modal-icon {
@@ -709,15 +703,24 @@ fill: var(--primary-brand-color);
     font-size: 12px;
     line-height: 1.33;
     letter-spacing: 0.04em;
-    
+    color: var(--primary-text-color);
 }
+.form-textarea::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+}
+.form-textarea:focus {
+    outline: none;
+    border-color: var(--primary-brand-color);
+}
+
 
 .form-check {
     display: inline-flex;
     align-items: center;
 }
 .form-check-label {
-    display: inline-block;
+    display: flex;
+    align-items: center;
     margin-bottom: 24px;
     font-weight: 400;
     font-size: 12px;
@@ -731,9 +734,7 @@ fill: var(--primary-brand-color);
     width: 16px;
     height: 16px;
     margin-right: 8px;
-
-    background-position: center;
-    background-size: 10*8;
+    background-position: center;  
     background-repeat: no-repeat;
     border: 1.25px solid #2E2F42;
     border-radius: 2px;
@@ -746,10 +747,9 @@ fill: var(--primary-brand-color);
     background-image: url(../images/click.svg);
 }
 
-/* .form-check-label::before:focus {
-    background-color: var(--pressed-state-color);
-        background-image: url(../images/click.svg);
-} */
+.form-check-input:focus + .form-check-label::before {
+    border-color: var(--pressed-state-color); 
+}
 .form-link {
     color: var(--primary-brand-color);
 }
@@ -758,11 +758,8 @@ fill: var(--primary-brand-color);
     display: block;
     width: 169px;
     height: 56px;
-    margin: 0 auto;
-
-   
-    padding: 16px 32px;
-    
+    margin: 0 auto;  
+    padding: 16px 32px;   
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: transparent;
